--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ a:hover {
     text-decoration: none;
     cursor: pointer;
 }
-
+/*  */
 #page-loading-blocs-notifaction {
     position: fixed;
     top: 0;
@@ -826,7 +826,7 @@ h4 {
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.bmp");
+    background-image: url("img/image-de-presentation.jpg");
 }
 
 @media (max-width: 1024px) {
