--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -156,7 +156,7 @@ button,
 html input[type=button],
 input[type=reset],
 input[type=submit] {
-    -webkit-appearance: button;
+    /* -webkit-appearance: button; */
     cursor: pointer
 }
 
@@ -192,7 +192,7 @@ input[type=search] {
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
-    -webkit-appearance: textfield
+    /* -webkit-appearance: textfield */
 }
 
 input[type=search]::-webkit-search-cancel-button,
@@ -3190,9 +3190,9 @@ textarea.form-control {
     height: auto
 }
 
-input[type=search] {
+/* input[type=search] {
     -webkit-appearance: none
-}
+} */
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
     input[type=date].form-control,
@@ -7055,7 +7055,7 @@ button.list-group-item-danger.active:hover {
 }
 
 button.close {
-    -webkit-appearance: none;
+    /* -webkit-appearance: none; */
     padding: 0;
     cursor: pointer;
     background: 0 0;
@@ -7681,7 +7681,6 @@ button.close {
     margin: 1px;
     text-indent: -999px;
     cursor: pointer;
-    background-color: #000\9;
     background-color: rgba(0, 0, 0, 0);
     border: 1px solid #fff;
     border-radius: 10px
