--- a/style.css
+++ b/style.css
@@ -774,7 +774,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #B45A3D;
+    background-color: #89442F;
 }
 
 .tc-white {
@@ -1074,4 +1074,8 @@ h4 {
 }
 .image-resize-mode {
     height: 100px;
+}
+.z-index-100 {
+    position: relative;
+    z-index: 100;
 }
