webp small size

--- a/style.css
+++ b/style.css
@@ -1032,7 +1032,7 @@ h4 {
         width: 100%;
     }
     .bg-banniere {
-        background-image: url("img/agence-la-panthere-small.png");
+        background-image: url("img/agence-la-panthere-small.webp");
     }
 }
 
