--- a/style.css
+++ b/style.css
@@ -782,12 +782,12 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #8F340A;
     color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
+    background: #b84510!important;
     color: #FFFFFF!important;
 }
 
