--- a/style.css
+++ b/style.css
@@ -1054,6 +1054,9 @@ h4 {
 .size-22 {
     font-size: 22px;
 }
+.size-36 {
+    font-size: 36px;
+}
 .citation {
     font-size: 20px;
     font-style: italic;
